--- a/collection/file.ini
+++ b/collection/file.ini
@@ -26,6 +26,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [CopyFiles]
@@ -51,6 +52,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [CreateURLShortcut]
@@ -73,6 +75,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DefaultFileExt]
@@ -96,6 +99,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DeleteFiles]
@@ -120,6 +124,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DeleteFilesWithUndo]
@@ -145,6 +150,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DeleteFileWithUndo]
@@ -168,6 +174,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DirToPath]
@@ -190,6 +197,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DOSToUnixPath]
@@ -212,6 +220,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [EnsureFolders]
@@ -236,6 +245,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [FileSizeString]
@@ -260,6 +270,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ForceFileExt]
@@ -283,6 +294,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetFileDate]
@@ -306,6 +318,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetFixedFileVerInfo]
@@ -329,6 +342,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetLastDirectory]
@@ -353,6 +367,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [HasFileExt]
@@ -376,6 +391,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [HasVerInfo]
@@ -399,6 +415,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsArchiveFile]
@@ -423,6 +440,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsFile]
@@ -447,6 +465,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsHiddenFile]
@@ -471,6 +490,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsReadOnlyFile]
@@ -495,6 +515,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsSystemFile]
@@ -519,6 +540,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsURLShortcut]
@@ -542,6 +564,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsValidFileName]
@@ -566,6 +589,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ListFiles]
@@ -590,6 +614,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [LongToShortFilePath]
@@ -613,6 +638,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [PathIsRoot]
@@ -637,6 +663,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [PathToDir]
@@ -659,6 +686,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [RemoveFileExt]
@@ -682,6 +710,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SetFileDate]
@@ -705,6 +734,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SizeOfFile64]
@@ -729,6 +759,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [Touch]
@@ -751,6 +782,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [URLFromShortcut]
@@ -775,6 +807,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [CountFiles]
@@ -799,6 +832,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [DirPurge]
@@ -821,6 +855,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ExeType]
@@ -846,6 +881,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [FileInProgramDir]
@@ -869,6 +905,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetParentDirectory]
@@ -893,6 +930,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsDirectory]
@@ -918,6 +956,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsFolderEmpty]
@@ -943,6 +982,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=N
 
 [IsHugeFile]
@@ -967,6 +1007,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsReservedDeviceName]
@@ -990,6 +1031,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ShortToLongFilePath]
@@ -1014,6 +1056,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SizeOfFile]
@@ -1038,6 +1081,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SizeOfFile2]
@@ -1062,6 +1106,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SubDirectoryCount]
@@ -1085,6 +1130,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=N
 
 [TempFileName]
@@ -1109,6 +1155,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [TempFileNameEx]
@@ -1133,6 +1180,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [TExeType]
@@ -1157,4 +1205,5 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
