--- a/collection/io.ini
+++ b/collection/io.ini
@@ -27,6 +27,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [StreamToString]
@@ -50,6 +51,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [StringToFile]
@@ -74,6 +76,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [StringToStream]
@@ -97,6 +100,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [WideStringToUnicodeFile]
@@ -121,6 +125,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [WideStringToUnicodeStream]
@@ -144,6 +149,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [FileHasWatermark_A]
@@ -170,6 +176,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [FileHasWatermark_B]
@@ -195,6 +202,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [StreamHasWatermark]
@@ -219,6 +227,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [UnicodeFileToWideString]
@@ -244,6 +253,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [UnicodeStreamToWideString]
@@ -269,4 +279,5 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
