--- a/collection/web.ini
+++ b/collection/web.ini
@@ -27,6 +27,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ColorToHTML]
@@ -49,6 +50,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=N
 
 [DownloadURLToFile]
@@ -73,6 +75,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetIEVersionStr]
@@ -95,6 +98,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsValidURLProtocol]
@@ -118,6 +122,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [CheckInternetConnection]
@@ -141,6 +146,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ExtractURIFragment]
@@ -165,6 +171,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ExtractURIQueryString]
@@ -189,6 +196,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsInternetConnected]
@@ -213,6 +221,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [MakeSafeHTMLText]
@@ -237,6 +246,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [RemoveURIFragment]
@@ -261,6 +271,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [RemoveURIQueryString]
@@ -285,6 +296,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [URIDecode]
@@ -309,6 +321,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [URIEncode]
@@ -333,6 +346,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [URLDecode]
@@ -357,6 +371,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [URLEncode]
@@ -381,4 +396,5 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
