--- a/collection/winsys.ini
+++ b/collection/winsys.ini
@@ -29,6 +29,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ComputerName]
@@ -55,6 +56,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [GetCurrentVersionRegStr]
@@ -81,6 +83,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsMediaCenterOS]
@@ -107,6 +110,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsTabletOS]
@@ -133,6 +137,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsVista]
@@ -160,6 +165,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsWin9x]
@@ -186,6 +192,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsWindows7]
@@ -213,6 +220,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsWinNT]
@@ -239,6 +247,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsWow64]
@@ -265,6 +274,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ProgramFilesFolder]
@@ -291,6 +301,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [ScreenResolution]
@@ -313,6 +324,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SystemFolder]
@@ -339,6 +351,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [TempFolder]
@@ -365,6 +378,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [UserName]
@@ -391,6 +405,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [WindowsFolder]
@@ -417,6 +432,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [WindowsProductID]
@@ -443,6 +459,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsRemoteSession]
@@ -469,4 +486,5 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
