--- a/collection/encoding.ini
+++ b/collection/encoding.ini
@@ -26,6 +26,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [CodePageSupportsString]
@@ -50,6 +51,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [EncodingSupportsString]
@@ -73,6 +75,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsASCIIChar]
@@ -95,6 +98,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsASCIIDigit]
@@ -117,6 +121,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsASCIIText]
@@ -141,6 +146,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16BEFile]
@@ -165,6 +171,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16BEStream]
@@ -188,6 +195,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16File]
@@ -212,6 +220,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16LEFile]
@@ -236,6 +245,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16LEStream]
@@ -259,6 +269,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF16Stream]
@@ -282,6 +293,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF8File]
@@ -306,6 +318,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF8Stream]
@@ -329,6 +342,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsASCIIFile]
@@ -354,6 +368,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsASCIIStream]
@@ -379,6 +394,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUnicodeFile]
@@ -404,6 +420,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUnicodeStream]
@@ -428,6 +445,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF7File]
@@ -453,6 +471,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [IsUTF7Stream]
@@ -477,6 +496,7 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
 
 [SafeFreeEncoding]
@@ -499,4 +519,5 @@ DelphiXE2=Y
 DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
+Delphi12A=Y
 FPC=Y
